styles/main.css
:root {
    --blue-color:#011F51;
    --dark-blue-color:#0A2443;
    --other-blue-color: #002648;
    --red-color:#FF3718;
    --light-blue-color:rgb(22, 181, 255);
    --white-color:#F2F2F2;
    --gold-color:#D0B78D;
}

* {
    padding:0;
    margin:0;
    box-sizing: border-box;
}

a {
    text-decoration: none;
    color: var(--light-blue-color);
}

body {
    font-family: 'Kumbh Sans', sans-serif;
    background: var(--white-color);
}

/* HEADER */

header {
    background: var(--other-blue-color);
}

/* warning */
header .covid {
    background: var(--red-color);
    padding: 20px;
    text-align: center;
}

header .covid .warning a {
    color: var(--white-color);
}

/* header */

header .header {
    width:80%;
    margin: 0 auto;
    display: grid;
    grid-template-columns: 1fr 1fr;

}

header .header .logo {
    text-align:left;
    padding: 15px 0;
}

header .header .logo img {
    width: 150px;
}

header .header .links {
    text-align: right;
    padding: 35px 0;
}

header .header .links i {
    color: white;
}

header .header .links button {
    background: transparent;
    border: none;
    transition: all .5s ease-in-out;
}

header .header .links button span {
    color:var(--four-color);
    font-size: 40px;
}

/*NAV SLIDER*/

.navbar {
    position:fixed;
    top:0;
    left:-280px;
    width:100%;
    height:100%;
    background: var(--dark-blue-color);
    border: 2px solid var(--two-color);
    box-shadow: 0 0 10px 5px rgba(0,0,0,.25);
    opacity:0;
    transition: left 0.25s ease-in-out, opacity 0.25s ease-in-out;
    z-index:10;
    color: var(--blue-color);
}

.navbar-open {
    left:0;
    opacity:1;
}

#logo_slider {
    margin: 20px auto;
    display:flex;
    justify-content: center;
    width: 180px;
}

.navbar button {
    background: transparent;
    color: var(--white-color);
    padding: 20px;
    float: right;
    border: none;
    -webkit-tap-highlight-color: transparent;
}

.navbar ul {
    padding: 20px;
    list-style-type: none;
}

.navbar ul a li {
    font-size:1.5rem;
    background: var(--other-blue-color);
    padding: 20px 20px;
    margin-bottom: 5px;
    color: var(--white-color);
    border-radius: 5px;
}

.navbar ul a li:hover {
    background: var(--red-color);
}

.navbar ul a li i {
    margin-right: 10px;
}

/* HOME */
#home-page {
    background: var(--dark-blue-color);
}

#home-page .intro {
    color: var(--white-color);
    padding: 20px;
    text-align:center;
}

#home-page .intro .head img {
    width:100%;
}

#home-page .intro .head h1 {
    margin-bottom: 30px;
    
}

#home-page .intro .head h3 {
    margin-bottom: 10px;
    margin-top: -1rem;
}

#home-page .intro .cards-social {
    display: flex;
    justify-content: space-evenly;
}

#home-page .intro .cards-social .card-social {
    background: rgba(242, 242, 242, 0.1);
    color: var(--white-color);
    padding: 20px 10px;
    width: 80%;
    font-weight: 700;
    display:flex;
    justify-content: center;
}

#home-page .intro .cards-social .card-social p i {
    color: var(--gold-color);
    margin-right: 10px;
}

#home-page .intro .cards-social .card-social:first-child {
    margin-right: 10px;
}

#home-page .about-us {
    padding: 20px;
    color: white;
}

#home-page .about-us h1 {
    margin-bottom: 10px;
    font-weight: 400;
}

#home-page .about-us p {
    opacity: rgba(255, 255, 255, 0.1);
    line-height: 1.2;
}

#home-page .highlights {
    padding: 20px;
    color: white;
}

#home-page .highlights h1 {
    margin-bottom: 10px;
    font-weight: 400;
}

#home-page .highlights ul li {
    margin-bottom: 5px;
}

#home-page .highlights ul li {
    opacity: 0.7;
    list-style-type: none;
}

#home-page button {
    margin-top: 20px;;
    padding: 20px;
    width: 100%;
    background: transparent;
    border: 2px solid rgba(242, 242, 242, 0.3);
    color: var(--white-color);
    border-radius: 5px;
    font-size:1rem;
}

/* ANALYTICS */

#analytics-page h2 {
    color: var(--blue-color);
    font-weight: 400;
    text-align:center;
    margin-top: 20px;
}

#analytics-page .cards-stats {
    padding: 20px;
}

#analytics-page .cards-stats .card-stat {
    padding: 30px;
    display:flex;
    background: white;
    border-radius: 10px;
    color: var(--blue-color);
    margin-bottom: 10px;
}

#analytics-page .cards-stats .card-stat .circle {
    background: rgb(116, 209, 252);
    width: 60px;
    height:60px;
    border-radius:50%;
    margin-right: 20px;
    display:table;
}

#analytics-page .cards-stats .card-stat i {
    color: rgba(19, 153, 214, 1);
    font-size:1.2rem;
    display: table-cell;
    vertical-align: middle;
    text-align: center;
}

#analytics-page .cards-stats .card-stat span {
    font-size: 2rem;
    margin-top: 5px;
    font-weight: 700;
}

#analytics-page .cards-stats .card-stat p {
    font-size:1rem;
    color: gray;
    font-weight:400;
}

#analytics-page .charts-containers {
    text-align: center;
    display: grid;
    grid-template-columns: repeat(1,1fr);
    justify-content: center;
    gap: 20px;
}

#analytics-page .charts-containers .chart-container h1 {
    color: var(--blue-color);
    font-weight: 400;
    font-size: 2rem;
}


/* ABOUT */

 #about-page .card {
     margin: 20px;
     padding: 30px;
     background: white;
     border-radius: 10px;
 }

 #about-page .card h1 {
     margin-bottom: 15px;
 }

 #about-page .card h1 span {
    font-family: 'Damion', sans-serif;
    color: var(--red-color);
    font-size: 3rem;
 }

 #about-page .card .card-wrapper {
     display: grid;
     grid-template-columns: repeat(1,1fr);
     gap:20px;
 }

 #about-page .card .card-wrapper .inner-card {
    background: rgb(242, 242, 242);
    text-align: center;
    margin-top: 80px;
    border-radius: 15px;
 }

#about-page .card .card-wrapper .inner-card img {
     width: 50%;
     border-radius: 50%;
     margin-top: -60px;
}

#about-page .card .card-wrapper .inner-card h3 {
    margin: 20px 0;
}

#about-page .card .card-wrapper .inner-card p {
     padding: 0 30px 0 30px;
}

#about-page .card .card-wrapper .inner-card .profile-links {
    font-size: 1.5rem;
    padding: 10px 0;
}

#about-page .card .card-wrapper .inner-card .profile-links i {
    margin: 0 5px;
}

/* PRICES */

#prices-page {
    background: var(--dark-blue-color);
}

/* CONTACT */

#contact-page .card {
    margin: 20px;
    padding: 30px;
    background: white;
    border-radius: 10px;
    text-align: center;
}

#contact-page .card h1 {
    font-family: 'Damion', sans-serif;
    color: var(--red-color);
    font-size: 3rem;
    margin-bottom: 10px;
}

#contact-page .card h2 {
    margin-bottom: 10px;
    color:var(--blue-color);
}

#contact-page .card p {
    margin-bottom: 10px;
}

#contact-page .form-container {
    margin: 20px;
    padding: 30px;
    background: white;
    border-radius: 10px;
    display:flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

#contact-page .form-container h1 {
    margin-bottom: 10px;
}

#contact-page .form-container .form-group {
    width:100%;
    margin-top: 10px;
}

#contact-page .form-container .form-group label {
    display:block;
    margin: 10px 0;
}

#contact-page .form-container .form-group input,
#contact-page .form-container .form-group textarea {
    width: 100%;
    border-top: none;
    border-left: none;
    border-right: none;
    border-bottom: 1px solid rgb(228, 228, 228);
    padding:10px 5px;

}

#contact-page .form-container .form-group input:hover,
#contact-page .form-container .form-group textarea {
    border-bottom: 1px solid var(--light-blue-color);
}

#contact-page .form-container .form-group textarea {
    margin-bottom: 20px;
}

#contact-page .form-container form button[type="submit"] {
    width: 100%;
    padding: 20px 10px;
    font-size:1rem;
    background: var(--blue-color);
    color: var(--white-color);
    border:none;
    border-radius: 5px;
    cursor:pointer;
}

#contact-page .form-container form button[type="submit"]:hover {
    background: var(--red-color);
}

#status {
    text-align: center;
    width: 90vw;
    margin:0 auto;
    padding: 20px 10px;
    border-radius: 5px;
    background: rgba(55, 199, 55, 0.4);
}

#status.success {
    border: 1px solid green;
    background: rgba(55, 199, 55, 0.4);
    animation: status 4s ease forwards;
}

#status.error {
    border: 1px solid red;
    background: rgb(222, 74, 74,0.4);
    animation: status 4s ease forwards;
}

@keyframes status {
    0% {
        opacity: 1;
        pointer-events: all;
    }
    90% {
        opacity: 1;
        pointer-events: all;
    }
    100% {
        opacity: 0;
        pointer-events: none;
    }
}

/* PRICES */

#prices-page .prices-head {
    color: var(--white-color);
    text-align: center;
    padding: 20px 0 0 0;
}

#prices-page .prices-head h2 {
    font-weight: 400;
    font-size:1rem;
    line-height: 1.5rem;
}

#prices-page .prices-wrapper {
    padding: 20px;
    display:grid;
    grid-template-columns: repeat(1,1fr);
    gap:20px;
}

#prices-page .prices-wrapper .prices-card {
    background: var(--white-color);
    padding:20px;
    border-radius:5px;
    color: var(--blue-color);

}

#prices-page .prices-wrapper .prices-card h4 {
    text-align:right;
    color: var(--light-blue-color);
}

#prices-page .prices-wrapper .prices-card p {
    margin-bottom:5px;
}

#prices-page .prices-wrapper .prices-card h3 {
    margin-top: 10PX;;
    margin-bottom: 10px;
    font-size: 1rem;
}

#prices-page .prices-wrapper .prices-card h1 {
    display:inline;
    margin-right: 10px;
    color: var(--red-color);
}

#prices-page .prices-wrapper .prices-card #note {
    margin-top:10px;
    font-size: 0.8rem;
    color: gray;
    line-height: 1.2rem;
}

/* FOOTER */

 footer {
     background: var(--white-color);
 }

 footer .footer-wrapper {
     text-align: center;
     padding: 20px;
 }

 footer .footer-wrapper .footer-head {
     display: flex;
     vertical-align: center;
     align-items: center;
     justify-content: center;
 }


 footer .footer-wrapper .footer-head img {
     width: 40%;
 }

 footer .footer-wrapper .footer-head span  {
     background: var(--light-blue-color);
     padding: 10px 15px;
     border-radius: 10px;
     font-size: .7rem;
     font-weight: bold;
     color: var(--white-color);
     margin-left: 10px;
 }

 footer .footer-wrapper ul li {
     text-decoration: none;
     display:inline-block;
     margin-top: 20px;
     font-size: .8rem;
     margin-right:10px;
     margin-bottom: 15px;
 }

 footer .footer-wrapper ul a {
     color: var(--blue-color);
     font-weight: bold;
 }

 footer .footer-wrapper .icons i {
     font-size: 1.3rem;
     font-weight: bold;
     margin-right: 15px;
 }

 footer .footer-wrapper .icons a {
    color: var(--blue-color);
    cursor: pointer;
 }

 footer .footer-wrapper p {
     color: rgb(198, 198, 198);
     font-size: .8rem;
     margin-top: 20px;
 }

 /* RESULTS */
 
.results-page .card {
    margin: 20px;
    padding: 30px;
    background: white;
    border-radius: 10px;
    text-align:center;
}

.results-page .card p {
    margin: 18px 0;
    font-size: 15px;
}

.results-page .card #giveaway-img {
    width: 80%;
    border-radius: 10px;
    border: 3px solid rgb(242, 242, 242);
}

.results-page .card #winner-img {
    width: 40%;
    height: 40%;
    border-radius: 50%;
    border: 3px solid rgb(242, 242, 242);
    margin-top: -60px;
}

.results-page .card .comment {
    background: rgb(250, 250, 250);
    padding: 5px 20px;
    border-radius: 10px;
}

.results-page .card h2 {
    color: var(--blue-color);
}

